Release 2.3.2
- Added a ASCII art header.

- Updated for Minecraft 1.16.5 & Java 8u281.

- Enabled TLS 1.3 and future versions in PowerShell.

- Added automatic update checker.

- Added settings to control leaving RAM to windows and how much RAM to reserve.
- Added more messages visible even when verbose info is not enabled to determine progress.

- Added auto tuning -d64 and -server options by testing the installed JVM.

- Added vendor and production/test server determinatioon.

- Make the cache folder hidden, it is nothing there useful for end-users.

- Disabled PowerShell and .NET version printing for now because it is slow.

- Fixed PowerShell title problem entirely.

- Auto-disable tiered_compilation if using Java below Java 8 and warn.

- Warn if using below Java 8 or using old Java 8 revision.

- Fix automatic RAM setting on systems with < 1.5GB RAM.

- Added detection for Windows Server systems.

- Added removion for more log files to auto deleter.

- Added -XX:+UseNUMA JVM argument.

Signed-off-by: Mustafa ÖNCEL <support@lifemcserver.com>